Add coinbase connector, add readme and start scripts